# nexrad

./: Cargo.toml  README.md
examples/: decode.rs  decompress.rs  download.rs  render.rs
src/: decode.rs  decompress.rs  download.rs  error.rs  file_metadata.rs  lib.rs  model.rs  test.rs
