[package]
description = "Download and decode functions for NEXRAD radar data."
authors = ["Daniel Way <contact@danieldway.com>"]
name = "nexrad"
version = "0.0.3"
license = "MIT"
edition = "2021"
repository = "https://github.com/danielway/nexrad"
exclude = [".github"]

[[example]]
name = "download"
path = "examples/download.rs"
required-features = ["download"]

[features]
default = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
bzip2 = "0.4"
thiserror = "1.0.61"
anyhow = "1.0.86"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
